@@ -1,6 +1,6 @@
 [package]
 name = "netidx-core"
-version = "0.18.1"
+version = "0.18.2"
 authors = ["Eric Stokes <letaris@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -29,3 +29,4 @@ rust_decimal = { version = "1",  features = ["serde-with-float", "serde-with-str
 uuid = "1"
 smallvec = "1"
 enumflags2 = "0.7"
+triomphe = "0.1"
